[package]
name = "interactsh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "interactsh"
crate-type = ["cdylib"]


[features]
default = ["lua53"]
lua54 = ["tealr/mlua_lua54"]
lua53 = ["tealr/mlua_lua53"]
lua52 = ["tealr/mlua_lua52"]
lua51 = ["tealr/mlua_lua51"]
luajit = ["tealr/mlua_luajit"]
vendored = ["tealr/mlua_vendored"]


[dependencies]
mlua = { version = "0.8", features = ["vendored", "async","module"] }
tealr = {version="0.9.0-alpha4", features=["mlua", "mlua_async"]} 
interactsh-rs = "0.3.0"
async-std = "1.12.0"

